死链和note修改

--- a/zh-CN/4.deploy/3.deploy-oceanbase-enterprise-edition/2.preparations-before-deploy/3.prepare-installation-packages.md
+++ b/zh-CN/4.deploy/3.deploy-oceanbase-enterprise-edition/2.preparations-before-deploy/3.prepare-installation-packages.md
@@ -35,7 +35,7 @@
        <td><ul><li>X86_64 平台：ocpxxx.tar.gz</li><li>ARM_64 平台：ocpxxx.arm.tar.gz</li></ul></td>
    </tr>
    <tr>
-       <td>MetaDB docker image<blockquote><b>注意</b></br>如果使用的 OAT docker image 安装 OAT，安装 OCP 时还需要提供 MetaDB docker image。</blockquote></td>
+       <td>MetaDB docker image <main id="notice" type='notice'><h4>注意</h4><p>如果使用的 OAT docker image 安装 OAT，安装 OCP 时还需要提供 MetaDB docker image。</p></main></td>
        <td>用于部署 OCP MetaDB、MonitorDB。</td>
        <td>请联系技术支持获取最新 MetaDB 镜像。</td>
        <td><ul><li>X86_64 平台：meta_xxxxxx_xxxxxx_x86_xxxxxxxx.tgz</li><li>ARM_64 平台：meta_xxxxxx_xxxxxx_arm_xxxxxxxx.tgz</li></ul></td>
