--- a/zh-CN/4.deploy/5.deploy-oceanbase-database-community-edition/2.local-deployment/4.deploy-by-ui/2.deploy-by-ocp.md
+++ b/zh-CN/4.deploy/5.deploy-oceanbase-database-community-edition/2.local-deployment/4.deploy-by-ui/2.deploy-by-ocp.md
@@ -46,7 +46,7 @@
    | **IP 地址**  | 待添加机器的 IP，请输入机器的 IPv4 地址。  |
    | **SSH 端口** | 默认为 22。               |
    | **机型**   | 为配置相同的主机指定的一个标签，便于 OCP 更好地管理主机。如果没有对应的机型，可在下拉菜单中单击 **新增机型**，添加新的机型。|
-   | **机房**   | 选择机器所处机房。如果没有对应的机房，可在下拉菜单中单击 **新增机房** 在 OCP 中新增机房信息。机房信息包括 **机房** 与 **区域**。<ul><li>机房是 OceanBase 集群需要记录的一种主机属性，这个属性会作为 OceanBase 负载均衡和 SQL 语句路由策略的参考项，请按照实际情况填写。</li><li>区域用于表示主机所处的地理区域，是 OceanBase 集群需要记录的主机属性之一，对于 OceanBase 集群的负载均衡和 SQL 语句路由策略会有一定的影响，请按照实际情况填写。</li></ul><blockquote><b>说明</b></br> OCP V3.1.1 版本开始支持多 AZone 模式，新增机房时，将在当前 OCP 所在的 AZone 中创建新的机房。</blockquote> |
+   | **机房**   | 选择机器所处机房。如果没有对应的机房，可在下拉菜单中单击 **新增机房** 在 OCP 中新增机房信息。机房信息包括 **机房** 与 **区域**。<ul><li>机房是 OceanBase 集群需要记录的一种主机属性，这个属性会作为 OceanBase 负载均衡和 SQL 语句路由策略的参考项，请按照实际情况填写。</li><li>区域用于表示主机所处的地理区域，是 OceanBase 集群需要记录的主机属性之一，对于 OceanBase 集群的负载均衡和 SQL 语句路由策略会有一定的影响，请按照实际情况填写。</li></ul><main id="notice" type='explain'><h4>说明</h4><p>OCP V3.1.1 版本开始支持多 AZone 模式，新增机房时，将在当前 OCP 所在的 AZone 中创建新的机房。</p></main>|
    | **主机类型**     | 有 **物理机** 和 **容器** 两种选项。   |
    | **凭据**   | 选择远程登录物理机使用的凭据，您可以在下拉菜单中单击 **新增凭据** 来新建凭据。 </br> 新增凭据时需注意：<ul><li>**凭据名**：以英文字母开头、英文或数字结尾，可包含英文、数字和下划线，且长度为 2 ~ 32。</li><li>**授权类型**：包含用户名/密码和 SSH 私钥两种方式。</li> <li>**用户类型**：支持拥有 root 权限的 SSH 用户，拥有 root 权限的普通用户须先配置免密执行 sudo 指令。OCP 目前仅支持配置所有指令免密执行 sudo，即在 `/etc/sudoers` 文件中，添加 `username ALL=(ALL) NOPASSWD:ALL`。</li></ul>|
    | **主机别名（可选）**   | 主机别名是您为配置相同的主机指定的一个标签，建议您指定有意义的名称，便于更好地管理主机。   |
