--- a/zh-CN/5.data-migration/10.use-sql-statements-migrate-data/1.data-migration-between-tables.md
+++ b/zh-CN/5.data-migration/10.use-sql-statements-migrate-data/1.data-migration-between-tables.md
@@ -19,7 +19,7 @@ FROM source_table_name
 |--------------|-----------------|
 | target_table_name  | 数据迁移的目标表。|
 | target_col_name    | 目标表的列名称。如果要更新目标表的全部列数据，可以不填写列名称。|
-| source_col_name    | 源表的列名称。选择需要迁移的列，如果要选中全部数据可以用 `*` 表示。 <blockquote><b>注意</b></br>选择的列数量需要与目的表中的列数量保持一致。</blockquote> |
+| source_col_name    | 源表的列名称。选择需要迁移的列，如果要选中全部数据可以用 `*` 表示。 <main id="notice" type='notice'><h4>注意</h4><p>选择的列数量需要与目的表中的列数量保持一致。</p></main>  |
 | source_table_name  | 数据迁移的源表。|
 | WHERE expr  | 迁移数据的筛选条件，不填表示迁移 `SELECT` 选中的所有行记录。|
 
@@ -45,7 +45,7 @@ WHEN NOT MATCHED THEN INSERT VALUES((source_col_name[, source_col_name] ...))
 | target_table_name  | 数据迁移的目标表。|
 | source_table_name  | 数据迁移的源表。|
 | ON (expr)          | 源表和目标表的连接条件。|
-| source_col_name    | 源表的列名称。选择需要迁移的列，如果要选中全部数据可以用 `*` 表示。 <blockquote><b>注意</b></br>选择的列数量需要与目标表中的列数量保持一致，并且迁移的数据要符合目标表的数据类型。</blockquote> |
+| source_col_name    | 源表的列名称。选择需要迁移的列，如果要选中全部数据可以用 `*` 表示。 <main id="notice" type='notice'><h4>注意</h4><p>选择的列数量需要与目标表中的列数量保持一致，并且迁移的数据要符合目标表的数据类型。</p></main>  |
 | WHERE expr  | 迁移数据的筛选条件。|
 
 ### 示例 1
