--- a/zh-CN/5.data-migration/11.bypass-import/3.use-insert-into-select-statement-to-bypass-import-data.md
+++ b/zh-CN/5.data-migration/11.bypass-import/3.use-insert-into-select-statement-to-bypass-import-data.md
@@ -23,7 +23,7 @@ INSERT /*+ append enable_parallel_dml parallel(N) */ INTO  table_name select_sen
 |参数|描述|
 |------|------|
 | append | 表示走旁路导入。|
-| enable_parallel_dml parallel(N) | 加载数据的并行度，`N` 默认为 `4`。<blockquote><b>说明</b></br>一般情况下，`enable_parallel_dml` Hint 和 `parallel` Hint 必须配合使用才能开启并行 DML。不过，当目标表的 Schema 上指定了表级别的并行度时，仅需指定 `enable_parallel_dml` Hint。</blockquote>|
+| enable_parallel_dml parallel(N) | 加载数据的并行度，`N` 默认为 `4`。<main id="notice" type='explain'><h4>说明</h4><p>一般情况下，<code>enable_parallel_dml</code> Hint 和 <code>parallel</code> Hint 必须配合使用才能开启并行 DML。不过，当目标表的 Schema 上指定了表级别的并行度时，仅需指定 <code>enable_parallel_dml</code> Hint。</p></main>|
 
 ## 示例
 
