--- a/zh-CN/5.data-migration/7.migrate-data-from-csv-file-to-oceanbase-database/2.use-the-load-command-to-load-the-csv-data-file-to-the-oceanbase-database.md
+++ b/zh-CN/5.data-migration/7.migrate-data-from-csv-file-to-oceanbase-database/2.use-the-load-command-to-load-the-csv-data-file-to-the-oceanbase-database.md
@@ -74,10 +74,10 @@ LOAD DATA
 |---------------------------------------------------------------------------------------------------------------------------------|------|----------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------|----------------------------|
 | \[/\*+ parallel(N)\*/\]                                                  | 否    | 指定加载数据的并行度，建议使用的值范围是\[0 - 租户的最大CPU数\]                    | /\*+ parallel(4) \*/       |
 | INFILE 'file_name'| 是    | 指定输入文件的路径和文件名。                                           | infile '/home/admin/a.csv' |
-| \[REPLACE \| IGNORE\]                                                    | 否    | 指定如何处理重复的数据。LOAD DATA 通过表的主键来判断数据是否重复，如果表不存在主键，那么 LOAD DATA 语句就无法判断数据是否重复，replace 和 ignore 选项没有区别。 replace：表示将表中原有的数据替换成为输入文件中的数据。 ignore：表示忽略掉重复的数据。 <br></br>**说明** </br> 如果用户不指定这个选项，那么遇到重复数据的时候，LOAD DATA 语句会将出现把错误的数据记录到日志文件中。| replace                    |
+| \[REPLACE \| IGNORE\]                                                    | 否    | 指定如何处理重复的数据。LOAD DATA 通过表的主键来判断数据是否重复，如果表不存在主键，那么 LOAD DATA 语句就无法判断数据是否重复，replace 和 ignore 选项没有区别。 replace：表示将表中原有的数据替换成为输入文件中的数据。 ignore：表示忽略掉重复的数据。 <main id="notice" type='explain'><h4>说明</h4><p>如果用户不指定这个选项，那么遇到重复数据的时候，LOAD DATA 语句会将出现把错误的数据记录到日志文件中。</p></main> | replace                    |
 | INTO TABLE tbl_name                                                      | 是    | 指定目标表名称。                                                 | into table tbl_name        |
-| \[{FIELDS \| COLUMNS} \[TERMINATED BY 'string'\] \[\[OPTIONALLY\] ENCLOSED BY 'char'\] \[ESCAPED BY 'char'\] \] | 否    | 指定输入文件中各个字段的分隔符选项，通过 Fields \| Columns 子句来指定。 terminated By：用来指定字段的分隔符。 enclosed By：指定每个字段的开始和结束是否包含了特定的字符。 escaped By：指定字段中的通配符。 <br></br>**说明** </br> 如果用户没有指定，默认值是 teminated by '\\t' enclosed by '' escaped by '\\\\'                                                 | fields terminated by ','   |
-| \[LINES \[STARTING BY 'string'\] \[TERMINATED BY 'string'\] \]           | 否    | 指定输入文件中每一行的开始和结束字符，通过 Lines 子句设置。 starting By：指定每一行开始的字符。 terminated By：指定每一行的结束字符。<br></br> **说明**</br>  如果没有指定，默认执行 starting by ''  terminated by '\\n'                   | lines terminated by '\\n'  |
+| \[{FIELDS \| COLUMNS} \[TERMINATED BY 'string'\] \[\[OPTIONALLY\] ENCLOSED BY 'char'\] \[ESCAPED BY 'char'\] \] | 否    | 指定输入文件中各个字段的分隔符选项，通过 Fields \| Columns 子句来指定。 terminated By：用来指定字段的分隔符。 enclosed By：指定每个字段的开始和结束是否包含了特定的字符。 escaped By：指定字段中的通配符。 <main id="notice" type='explain'><h4>说明</h4><p>如果用户没有指定，默认值是 <code>teminated by '\t' enclosed by '' escaped by '\\'</code></p></main> | fields terminated by ','   |
+| \[LINES \[STARTING BY 'string'\] \[TERMINATED BY 'string'\] \]           | 否    | 指定输入文件中每一行的开始和结束字符，通过 Lines 子句设置。 starting By：指定每一行开始的字符。 terminated By：指定每一行的结束字符。<main id="notice" type='explain'><h4>说明</h4><p>如果没有指定，默认执行 <code>starting by ''  terminated by '\n'</code></p></main>| lines terminated by '\\n'  |
 | \[IGNORE number {LINES \| ROWS}\]                                        | 否    | 子句指定忽略掉输入文件的前 number 行数据。                                | ignore 1 lines             |
 | \[(col_name_var \[, col_name_var\] ...) \]               | 否    | 指定目标表的各列与输入文件字段之间的关系，通过 (col_name_var \[, col_name_var\] ...) 关键字指定。 如果用户没有指定，默认会将输入文件中的字段逐个与表中的列进行对应。如果用户通过 `col_name_or_user_var` 指定输入文件中的字段与表中列的对应关系，LOAD DATA 会根据指定的列名与表中的列进行对应，没有被指定的列会取空值。 如果输入文件中并没有包含所有的列，那么缺少的列按照以下的规则会被默认填充： 字符类型：空字符串 数值类型：0 日期类型：0000-00-00 如果用户需要添加空值，请在输入文件中使用'\\N'。 | (id, names)                |
 
