--- a/zh-CN/4.deploy/5.deploy-oceanbase-database-community-edition/2.local-deployment/5.deploy-OceanBase-database-of-multi-node-cluster.md
+++ b/zh-CN/4.deploy/5.deploy-oceanbase-database-community-edition/2.local-deployment/5.deploy-OceanBase-database-of-multi-node-cluster.md
@@ -386,7 +386,7 @@
       | servers  | 必选      | 无        | 每台机器需要用 `- name: 机器标识名 (换行)ip: 机器 IP` 指定，多个机器就指定多次，机器标识名不能重复。</br> 在机器 IP 不重复的情况下，也可以使用 `- <ip> （换行）- <ip>` 的格式指定，此时 `- <ip>` 的格式相当于 `- name: 机器 IP（换行）ip: 机器 IP`。 |
       | home_path  | 必选       | 无       | 组件的安装路径，建议在普通用户 admin 下。 |
       | memory_size  | 必选     | 无      | OCP Express 服务器的内存容量，推荐算法为：memory_size = 512MB +（期望的节点数 * 期望的租户数）* 60MB，期望的租户数需要包含 sys 和 ocp meta 租户本身。 |
-      | logging_file_total_size_cap  | 必选       | 1GB        | 日志文件总大小，默认为 1GB。<blockquote>**注意**：</br>该参数的单位需使用 GB 或 MB，若使用 G 或 M 单位会报错，无法成功部署 OCP Express。</blockquote> |
+      | logging_file_total_size_cap  | 必选       | 1GB        | 日志文件总大小，默认为 1GB。<main id="notice" type='notice'><h4>注意</h4><p>该参数的单位需使用 GB 或 MB，若使用 G 或 M 单位会报错，无法成功部署 OCP Express。</p></main> |
       | admin_passwd  | 必选      | 无        | OCP Express 登录页面的 admin 账户密码，密码长度 8~32 位，至少包含 2 位数字、2 位大写字母、2 位小写字母和 2 位特殊字符（~!@#%^&*_-+=\|(){}[]:;,.?/）。使用 OBD V2.1.0 及之后版本时，未设置的情况下会自动生成随机字符串。 |
 
 ### 步骤三：部署 OceanBase 集群
