--- a/zh-CN/6.manage/4.high-availability/4.arbitration-high-availability/2.enable-the-arbitration-service.md
+++ b/zh-CN/6.manage/4.high-availability/4.arbitration-high-availability/2.enable-the-arbitration-service.md
@@ -1,4 +1,4 @@
-# 开启仲裁服务
+# 为租户开启仲裁服务
 
 <main id="notice" >
 <h4>功能适用性</h4>
@@ -158,10 +158,12 @@
 
 更多仲裁服务相关的操作，请参见以下信息：
 
-* [关闭仲裁服务](3.disable-the-arbitration-service.md)
+* [部署两副本加仲裁服务的 OceanBase 集群](../../../4.deploy/3.deploy-oceanbase-database-enterprise/4.command-line-deployment/3.deploy-the-oceanbase-cluster-command-line/2.deploy-the-quorum-high-availability-service.md)
 
-* [修改降级触发的控制时间](4.modify-the-degradation-timeout.md)
+* [为租户关闭仲裁服务](3.disable-the-arbitration-service.md)
 
-* [替换仲裁服务](5.replace-the-arbitration-service.md)
+* [修改日志流降级控制时间](4.modify-the-degradation-timeout.md)
 
-* [删除仲裁服务](6.remove-the-arbitration-service.md)
+* [为集群替换仲裁服务](5.replace-the-arbitration-service.md)
+
+* [为集群删除仲裁服务](6.remove-the-arbitration-service.md)
