--- a/zh-CN/6.manage/4.high-availability/4.arbitration-high-availability/6.remove-the-arbitration-service.md
+++ b/zh-CN/6.manage/4.high-availability/4.arbitration-high-availability/6.remove-the-arbitration-service.md
@@ -1,15 +1,15 @@
-# 删除仲裁服务
+# 为集群删除仲裁服务
 
 <main id="notice" >
 <h4>功能适用性</h4>
 <p>该内容仅适用于 OceanBase 数据库企业版。OceanBase 数据库社区版暂不支持仲裁服务功能。</p>
 </main>
 
-如果不需要再使用仲裁服务，可以将仲裁服务从集群中删除。
+如果不需要再使用仲裁服务或仲裁服务故障时，可以将仲裁服务从集群中删除。
 
 ## 前提条件
 
-删除仲裁服务前，请确认所有租户的仲裁服务均已关闭，如果有租户未关闭仲裁服务，则删除操作会报错。关闭仲裁服务的详细操作，请参见 [关闭仲裁服务](3.disable-the-arbitration-service.md)。
+删除仲裁服务前，请确认所有租户（含 `sys` 租户）的仲裁服务均已关闭，如果有租户未关闭仲裁服务，则删除操作会报错。关闭仲裁服务的详细操作，请参见 [为租户关闭仲裁服务](3.disable-the-arbitration-service.md)。
 
 ## 操作步骤
 
@@ -50,12 +50,16 @@
 
 更多仲裁服务相关的信息，请参见以下内容：
 
+* [部署两副本加仲裁服务的 OceanBase 集群](../../../4.deploy/3.deploy-oceanbase-database-enterprise/4.command-line-deployment/3.deploy-the-oceanbase-cluster-command-line/2.deploy-the-quorum-high-availability-service.md)
+
 * [仲裁服务概述](1.arbitration-service-overview.md)
 
-* [开启仲裁服务](2.enable-the-arbitration-service.md)
+* [为租户开启仲裁服务](2.enable-the-arbitration-service.md)
 
-* [关闭仲裁服务](3.disable-the-arbitration-service.md)
+* [为租户关闭仲裁服务](3.disable-the-arbitration-service.md)
 
-* [修改降级触发的控制时间](4.modify-the-degradation-timeout.md)
+* [修改日志流降级控制时间](4.modify-the-degradation-timeout.md)
 
-* [替换仲裁服务](5.replace-the-arbitration-service.md)
+* [为集群替换仲裁服务](5.replace-the-arbitration-service.md)
+
+* [清理残留的集群信息](7.clear-the-residual-information.md)
