--- a/zh-CN/6.manage/4.high-availability/4.arbitration-high-availability/5.replace-the-arbitration-service.md
+++ b/zh-CN/6.manage/4.high-availability/4.arbitration-high-availability/5.replace-the-arbitration-service.md
@@ -1,11 +1,11 @@
-# 替换仲裁服务
+# 为集群替换仲裁服务
 
 <main id="notice" >
 <h4>功能适用性</h4>
 <p>该内容仅适用于 OceanBase 数据库企业版。OceanBase 数据库社区版暂不支持仲裁服务功能。</p>
 </main>
 
-当仲裁服务所在的机器故障时，可以在新的机器上部署仲裁服务后替换故障的仲裁服务。
+当仲裁服务所在的机器故障时，可以在新的机器上部署仲裁服务后为集群替换故障的仲裁服务。
 
 ## 前提条件
 
@@ -23,7 +23,7 @@
 
    有关更加详细的连接数据库的操作指引，参见 [连接数据库概述（MySQL 模式）](../../../3.develop/1.application-development-of-mysql-mode/1.database-connection-with-client-of-mysql-mode/1.connection-methods-overview-of-mysql-mode.md) 和 [连接数据库概述（Oracle 模式）](../../../3.develop/2.application-development-of-oracle-mode/1.database-connection-of-oracle-mode/1.connection-methods-overview-of-oracle-mode.md)。
 
-2. 执行以下命令，替换仲裁服务。
+2. 执行以下命令，为集群替换仲裁服务。
 
    ```sql
    ALTER SYSTEM REPLACE ARBITRATION SERVICE 'curr_arb_server_ip:curr_arb_server_port' WITH 'new_arb_server_ip:new_arb_server_port';
@@ -56,12 +56,16 @@
 
 更多仲裁服务相关的信息，请参见以下内容：
 
+* [部署两副本加仲裁服务的 OceanBase 集群](../../../4.deploy/3.deploy-oceanbase-database-enterprise/4.command-line-deployment/3.deploy-the-oceanbase-cluster-command-line/2.deploy-the-quorum-high-availability-service.md)
+
 * [仲裁服务概述](1.arbitration-service-overview.md)
 
-* [开启仲裁服务](2.enable-the-arbitration-service.md)
+* [为租户开启仲裁服务](2.enable-the-arbitration-service.md)
 
-* [关闭仲裁服务](3.disable-the-arbitration-service.md)
+* [为租户关闭仲裁服务](3.disable-the-arbitration-service.md)
 
-* [修改降级触发的控制时间](4.modify-the-degradation-timeout.md)
+* [修改日志流降级控制时间](4.modify-the-degradation-timeout.md)
 
-* [删除仲裁服务](6.remove-the-arbitration-service.md)
+* [为集群删除仲裁服务](6.remove-the-arbitration-service.md)
+
+* [清理残留的集群信息](7.clear-the-residual-information.md)
