--- a/zh-CN/3.develop/3.database-object-planning/3.create-external-table-in-develop.md
+++ b/zh-CN/3.develop/3.database-object-planning/3.create-external-table-in-develop.md
@@ -10,9 +10,9 @@
 
 ## 前提条件
 
-在创建外表前，您需要确认以下事项：
+在创建外表前，您需要确认以下事项：1
 
-* 请确认您已连接到 OceanBase 数据库，连接数据库的操作请参见 [连接数据库（MySQL 模式）](../1.database-connection-with-client-of-mysql-mode/1.connection-methods-overview-of-mysql-mode.md) 或者 [连接数据库（Oracle 模式）](../1.connect-to-oceanbase-database/2.connect-to-oceanbase-database-of-oracle-mode/1.connection-methods-overview-of-oracle-mode.md)。
+* 请确认您已连接到 OceanBase 数据库，连接数据库的操作请参见 [连接数据库（MySQL 模式）](../1.connect-to-oceanbase-database/1.connect-to-oceanbase-database-of-mysql-mode/1.connection-methods-overview-of-mysql-mode.md) 或者 [连接数据库（Oracle 模式）](../1.connect-to-oceanbase-database/2.connect-to-oceanbase-database-of-oracle-mode/1.connection-methods-overview-of-oracle-mode.md)。
   
   <main id="notice" type='explain'>
     <h4>说明</h4>
@@ -47,7 +47,7 @@ FORMAT = (format_options)
 ;
 ```
 
-关于 `CREATE EXTERNAL TABLE` 语句的详细信息，请参见 [CREATE EXTERNAL TABLE（MySQL 模式）](../../7.reference/5.sql-reference/1.sql-syntax/2.common-tenant-of-mysql-mode/6.sql-statement-of-mysql-mode/22.create-external-table-of-mysql-mode.md) 和 [CREATE EXTERNAL TABLE（Oracle 模式）](../../7.reference/5.sql-reference/1.sql-syntax/3.common-tenant-of-oracle-mode/9.sql-statement-of-oracle-mode/1.ddl-of-oracle-mode/16.create-external-table-of-oracle-mode.md) 语句创建外表，并参考以下内容完成外表的创建。
+更多 `CREATE EXTERNAL TABLE` 语句的详细信息，请参见 **CREATE EXTERNAL TABLE（MySQL 模式）** 和 **CREATE EXTERNAL TABLE（Oracle 模式）**。
 
 参数解释：
 
@@ -174,7 +174,7 @@ OceanBase 数据库支持以下两种路径格式：
         obclient -h127.1 -P2881 -uroot@mysql001 -p****** -A
         ```
 
-        更多连接数据库的信息，请参见 [连接数据库](../1.database-connection-with-client-of-mysql-mode/1.connection-methods-overview-of-mysql-mode.md)。
+        更多连接数据库的信息，请参见 [连接数据库](../1.connect-to-oceanbase-database/1.connect-to-oceanbase-database-of-mysql-mode/1.connection-methods-overview-of-mysql-mode.md)。
 
     3. 执行以下 SQL 命令，设置导入路径为 `/home/admin`。
 
@@ -232,6 +232,5 @@ OceanBase 数据库支持以下两种路径格式：
 ## 相关文档
 
 * [关于外表](../../7.reference/3.database-object-management/1.manage-object-of-mysql-mode/2.manage-tables-of-mysql-mode/10.manage-external-tables-of-mysql-mode/1.about-external-tables-of-mysql-mode.md)
-* [连接数据库（MySQL 模式）](../1.database-connection-with-client-of-mysql-mode/1.connection-methods-overview-of-mysql-mode.md)
-* [CREATE EXTERNAL TABLE（MySQL 模式）](../../7.reference/5.sql-reference/1.sql-syntax/2.common-tenant-of-mysql-mode/6.sql-statement-of-mysql-mode/22.create-external-table-of-mysql-mode.md)
+* [连接数据库（MySQL 模式）](../1.connect-to-oceanbase-database/1.connect-to-oceanbase-database-of-mysql-mode/1.connection-methods-overview-of-mysql-mode.md)
 * [secure_file_priv](../../7.reference/8.configuration-items-and-system-variables/2.system-variable/3.global-system-variable/115.secure_file_priv-global.md)
