--- a/zh-CN/7.reference/10.performance-tuning-guide/5.sql-optimization/3.distributed-execution-plan/5.execution-of-parallel-query.md
+++ b/zh-CN/7.reference/10.performance-tuning-guide/5.sql-optimization/3.distributed-execution-plan/5.execution-of-parallel-query.md
@@ -20,8 +20,8 @@
 obclient> CREATE TABLE PTABLE(c1 INT , c2 INT) PARTITION BY HASH(c1) PARTITIONS 16;
 Query OK, 0 rows affected 
 
-obclient> EXPLAIN SELECT * FROM ptable\G
-*************************** 1. row ***************************
+obclient> EXPLAIN SELECT * FROM ptable;
+
 Query Plan:
 =======================================================
 |ID|OPERATOR               |NAME    |EST. ROWS|COST   |
@@ -46,8 +46,8 @@ Outputs & filters:
 针对分区表，添加 `PARALLEL` Hint 启动并行查询，并指定 `dop` 值，通过 `EXPLAIN` 命令查看生成的执行计划。
 
 ```sql
-obclient> EXPLAIN SELECT /*+ PARALLEL(8) */ * FROM ptable\G
-*************************** 1. row ***************************
+obclient> EXPLAIN SELECT /*+ PARALLEL(8) */ * FROM ptable;
+
 Query Plan:
 =======================================================
 |ID|OPERATOR               |NAME    |EST. ROWS|COST   |
@@ -74,8 +74,8 @@ Outputs & filters:
 如果针对分区表的查询，查询分区数目小于等于 1，系统不会启动并行查询。如下例所示，对 `ptable` 的查询添加一个过滤条件 `c1=1`。
 
 ```sql
-obclient> EXPLAIN SELECT * FROM ptable WHERE c1 = 1\G
-*************************** 1. row ***************************
+obclient> EXPLAIN SELECT * FROM ptable WHERE c1 = 1;
+
 Query Plan:
 ======================================
 |ID|OPERATOR  |NAME  |EST. ROWS|COST |
@@ -92,8 +92,8 @@ Outputs & filters:
 通过计划可以看出，查询的目标分区个数为 1，系统没有启动并行查询。如果希望针对一个分区的查询也能够进行并行执行，就只能通过添加 `PARALLEL` Hint 的方式进行分区内并行查询，通过 `EXPLAIN` 命令查看生成的执行计划。
 
 ```sql
-obclient> EXPLAIN SELECT /*+ PARALLEL(8) */ * FROM ptable WHERE c1 = 1\G
-*************************** 1. row ***************************
+obclient> EXPLAIN SELECT /*+ PARALLEL(8) */ * FROM ptable WHERE c1 = 1;
+
 Query Plan:
 =================================================
 |ID|OPERATOR           |NAME    |EST. ROWS|COST |
@@ -131,8 +131,8 @@ Outputs & filters:
 obclient> CREATE TABLE stable(c1 INT, c2 INT);
 Query OK, 0 rows affected 
 
-obclient> EXPLAIN SELECT * FROM stable\G
-*************************** 1. row ***************************
+obclient> EXPLAIN SELECT * FROM stable;
+
 Query Plan:
 ======================================
 |ID|OPERATOR  |NAME  |EST. ROWS|COST |
@@ -151,8 +151,8 @@ Outputs & filters:
 针对非分区表，添加 `PARALLEL` Hint 启动分区内并行查询，并指定 `dop` 值（大于等于 2），通过 `EXPLAIN` 命令查看生成的执行计划。
 
 ```sql
-obclient> EXPLAIN SELECT /*+ PARALLEL(4)*/  * FROM stable\G
-*************************** 1. row ***************************
+obclient> EXPLAIN SELECT /*+ PARALLEL(4)*/  * FROM stable;
+
 Query Plan:
 =================================================
 |ID|OPERATOR           |NAME    |EST. ROWS|COST |
@@ -189,8 +189,8 @@ Query OK, 0 rows affected
 查询 `p1table` 与 `p2table` 的 `JOIN` 结果，`JOIN` 条件是 `p1table.c1=p2table.c2`，执行计划如下：
 
 ```sql
-obclient> EXPLAIN SELECT  * FROM p1table p1 JOIN p2table p2 ON p1.c1=p2.c2\G
-*************************** 1. row ***************************
+obclient> EXPLAIN SELECT  * FROM p1table p1 JOIN p2table p2 ON p1.c1=p2.c2;
+
 Query Plan:
 ====================================================================
 |ID|OPERATOR                          |NAME    |EST. ROWS|COST     |
@@ -227,8 +227,8 @@ Outputs & filters:
 如下例所示，改变 `JOIN` 的条件为 `p1table.c1=p2table.c2` 和 `p2table.c1=1`，这样针对 `p2table` 仅仅会选择单个分区，执行计划如下所示：
 
 ```sql
-obclient> EXPLAIN SELECT  * FROM p1table p1 JOIN p2table p2 ON p1.c1=p2.c2 AND p2.c1=1\G
-*************************** 1. row ***************************
+obclient> EXPLAIN SELECT  * FROM p1table p1 JOIN p2table p2 ON p1.c1=p2.c2 AND p2.c1=1;
+
 Query Plan:
 =============================================================
 |ID|OPERATOR                     |NAME    |EST. ROWS|COST   |
