--- a/zh-CN/7.reference/10.performance-tuning-guide/5.sql-optimization/4.sql-optimization/3.monitor-sql-execution-performance/3.plan-cache-view.md
+++ b/zh-CN/7.reference/10.performance-tuning-guide/5.sql-optimization/4.sql-optimization/3.monitor-sql-execution-performance/3.plan-cache-view.md
@@ -2,9 +2,9 @@
 
 计划缓存视图包含记录执行计划的缓存状态、执行统计的相关信息以及计划信息。
 
-## GV$OB_PLAN_CACHE_STAT
+## (G)V$OB_PLAN_CACHE_STAT 视图
 
-`GV$OB_PLAN_CACHE_STAT` 视图用于记录每个计划缓存的状态，每个计划缓存在该视图中有一条记录。
+`(G)V$OB_PLAN_CACHE_STAT` 展示当前租户在当前（所有）OBServer 节点的计划缓存整体的状态。其字段信息如下表所示。
 
 |   **字段名称**   | **类型（MySQL 模式）**    |    **类型（Oracle 模式）**    |               **描述**                |
 |--------------|-------------|--------------|-------------------------------------|
@@ -22,9 +22,9 @@
 | HASH_BUCKET  | BIGNIT(38)   | NUMBER(38)   | `plan_cache` Hash Map 中的 Bucket 的个数 |
 | STMTKEY_NUM  | BIGNIT(38)   | NUMBER(38)   | `plan_cache` 中 `stmt_key` 的个数       |
 
-## GV$OB_PLAN_CACHE_PLAN_STAT
+## (G)V$OB_PLAN_CACHE_PLAN_STAT 视图
 
-`GV$OB_PLAN_CACHE_PLAN_STAT` 用于记录计划缓存中所有执行计划的具体信息及每个计划总的执行统计信息，每个执行计划在该视图中有一条记录。
+`(G)V$OB_PLAN_CACHE_PLAN_STAT` 展示当前租户在当前（所有）OBServer 节点上的计划缓存中缓存的每一个缓存对象的状态。其字段信息如下表所示。
 
 |       **字段名称**        | **类型（MySQL 模式）**  | **类型（Oracle 模式）**  |           **描述**    |
 |-----------------------|-----------------------|----------------------|------------------------|
@@ -42,10 +42,10 @@
 | SPECIAL_PARAMS        | VARCHAR2(4096)|  VARCHAR2(4096)   | 表示不可参数化的参数值    |
 | PARAM_INFOS           | LONGTEXT      |  CLOB  | 表示参数化信息  |
 | SYS_VARS              | VARCHAR2(4096)| VARCHAR2(4096)   | 影响缓存对象的系统变量的值   |
+| CONFIGS               | VARCHAR(4096)       | 不支持  |    表示影响执行计划的配置项信息    |       
 | PLAN_HASH             | BIGNIT(20) UNSIGNED   |  NUMBER(38) | SQL 执行计划的哈希值   |
 | FIRST_LOAD_TIME       | TIMESTAMP(6) |  TIMESTAMP(6) WITH LOCAL TIME ZONE | 第一次被加载时间   |
 | SCHEMA_VERSION        | BIGNIT(20)   |  NUMBER(38)                        | Schema 版本号   |
-| MERGED_VERSION        | BIGNIT(20)   |  NUMBER(38)                        | 当前缓存的 Plan 对应的合并版本号  |
 | LAST_ACTIVE_TIME      | TIMESTAMP(6) |  TIMESTAMP(6) WITH LOCAL TIME ZONE | 上一次被执行时间     |
 | AVG_EXE_USEC          | BIGNIT(20)   |  NUMBER(38)                        | 平均执行时间   |
 | SLOWEST_EXE_TIME      | TIMESTAMP(6) |  TIMESTAMP(6) WITH LOCAL TIME ZONE | 最慢执行时间戳     |
@@ -69,8 +69,6 @@
 | OUTLINE_VERSION       | BIGNIT(20)   |  NUMBER(38)  | Outline 版本号          |
 | OUTLINE_ID            | BIGNIT(20)   |  NUMBER(38)  | Outline 的 ID。 如果为 -1 表示不是通过绑定 Outline 生成的计划      |
 | OUTLINE_DATA          | LONGTEXT     |  CLOB   | 计划对应的 Outline 信息   |
-| HINTS_INFO            | LONGTEXT     |  CLOB   | SQL 计划的 Hint 信息     |
-| HINTS_ALL_WORKED      | TINYINT(4)  |  NUMBER(38)    | SQL 计划中的 Hint 是否都已经生效      |
 | ACS_SEL_INFO          | LONGTEXT     |  CLOB      | 当前 ACS 计划对应的选择率空间         |
 | TABLE_SCAN            | TINYINT(4)   |  NUMBER(38)   | 表示该查询是否为主键扫描       |
 | EVOLUTION             | TINYINT(4)   |  NUMBER(38)   | 表示该执行计划是否在演进中           |
@@ -82,12 +80,15 @@
 | TEMP_TABLES           | LONGTEXT     |  CLOB    | SQL 计划中包含的临时表表名。如果没有临时表，字段为空。            |
 | IS_USE_JIT            | TINYINT(4)   |  NUMBER(38)   | SQL 计划是否开启了表达式编译执行              |
 | OBJECT_TYPE           | LONGTEXT     |  CLOB    | 缓存对象的类型： <ul><li> SQL_PLAN</li>   <li> PROCEDURE</li>   <li> FUNCTION </li>  <li> PACKAGE</li>   <li> ANONYMOUS   </li> </ul>         |
+| HINTS_INFO            | LONGTEXT     |  CLOB   | SQL 计划的 Hint 信息     |
+| HINTS_ALL_WORKED      | TINYINT(4)  |  NUMBER(38)    | SQL 计划中的 Hint 是否都已经生效      |
 | PL_SCHEMA_ID          | BIGNIT(20) UNSIGNED  |  NUMBER(38)    | 对于非匿名块的 PL 对象，字段为缓存对象的 Schema ID；对于匿名块，字段与 `PS_STMT_ID` 相同；对于 SQL 计划，该字段无意义。       |
 | IS_BATCHED_MULTI_STMT | TINYINT(4)   |  NUMBER(38)    | 表示是否为 Batched Multi Stmt 优化的计划        |
+| RULE_NAME             | VARCHAR(256)        | 不支持   |     规则名称         |
 
-## GV$OB_PLAN_CACHE_PLAN_EXPLAIN
+## (G)V$OB_PLAN_CACHE_PLAN_EXPLAIN
 
-`GV$OB_PLAN_CACHE_PLAN_EXPLAIN` 用于查询某条 SQL 在计划缓存中的执行计划。
+`(G)V$OB_PLAN_CACHE_PLAN_EXPLAIN` 展示缓存在当前（全部）OBServer 节点中的计划缓存中的物理执行计划。其字段信息如下表所示。
 
   <main id="notice" type='notice'>
     <h4>注意</h4>
