--- a/zh-CN/7.reference/10.performance-tuning-guide/5.sql-optimization/4.sql-optimization/4.optimizer-statistics/3.statistics-management/5.lock-and-unlock-function.md
+++ b/zh-CN/7.reference/10.performance-tuning-guide/5.sql-optimization/4.sql-optimization/4.optimizer-statistics/3.statistics-management/5.lock-and-unlock-function.md
@@ -37,12 +37,12 @@ PROCEDURE lock_schema_stats(
 
 参数解释如下表所示。
 
-|    参数    |                                                                                                                                   解释                                                                                                                                   |
-|----------|------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------|
-| ownname  | 用户名。如果用户名设置为 `NULL`，会默认使用当前登录用户名。                                                                                                                                                                                                                                      |
-| tabname  | 表名称。                                                                                                                                                                                                                                                                   |
-| partname | 分区名称。                                                                                                                                                                                                                                                                  |
-| stattype | 加锁的类型。一般包括如下三种加锁类型： <ul><li> `'ALL'` </li>  <li> `'DATA'`   </li>  <li> `'CACHE'`</li>  </ul>  **说明**  当前版本的 OceanBase 数据库的 Oracle 模式仅支持 `'ALL'` 类型。 |
+|    参数    |                  解释                                    |
+|----------|----------------------------------------------|
+| ownname  | <ul><li>Oracle 模式：用户名。如果用户名设置为 `NULL`，会默认使用当前登录用户名。</li><li>MySQL 模式：表所在数据库名称。    |
+| tabname  | 表名称。  |
+| partname | 分区名称。 |
+| stattype | 加锁的类型。一般包括如下三种加锁类型： <ul><li> `'ALL'` </li>  <li> `'DATA'`   </li>  <li> `'CACHE'`</li>  </ul> <main id="notice" type='explain'><h4>说明</h4> <p>当前版本的 OceanBase 数据库的 Oracle 模式仅支持 <code>'ALL'</code>  类型。 </p></main>  |
 
 ### 锁定功能的示例
 
@@ -86,12 +86,12 @@ PROCEDURE unlock_schema_stats(
 
 参数解释如下表所示。
 
-|    参数    |                                                                                                                                   解释                                                                                                                                   |
-|----------|------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------|
-| ownname  | 用户名。如果用户名设置为 `NULL`，会默认使用当前登录用户名。                                                                                                                                                                                                                                      |
-| tabname  | 表名称。                                                                                                                                                                                                                                                                   |
-| partname | 分区名称。                                                                                                                                                                                                                                                                  |
-| stattype | 加锁的类型。一般包括三种加锁类型：  `'ALL'`、 `'DATA'` 和 `'CACHE'`。   <br> **说明**  当前版本的 OceanBase 数据库的 Oracle 模式仅支持 `'ALL'` 类型。 |
+|    参数    |                                       解释                         |
+|----------|-----------------------------------------------------------------------|
+| ownname  | <ul><li>Oracle 模式：用户名。如果用户名设置为 `NULL`，会默认使用当前登录用户名。</li><li>MySQL 模式：表所在数据库名称。    |
+| tabname  | 表名称。  |
+| partname | 分区名称。  |
+| stattype | 加锁的类型。一般包括三种加锁类型：  <ul><li> `'ALL'` </li>  <li> `'DATA'`   </li>  <li> `'CACHE'`</li>  </ul>   <main id="notice" type='explain'><h4>说明</h4> <p>当前版本的 OceanBase 数据库的 Oracle 模式仅支持 <code>'ALL'</code>  类型。 </p></main>。 |
 
   <main id="notice" type='notice'>
     <h4>注意</h4>
