--- a/zh-CN/7.reference/10.performance-tuning-guide/5.sql-optimization/4.sql-optimization/5.query-rewrite/2.rule-based-query-rewriting.md
+++ b/zh-CN/7.reference/10.performance-tuning-guide/5.sql-optimization/4.sql-optimization/5.query-rewrite/2.rule-based-query-rewriting.md
@@ -90,8 +90,8 @@ obclient>SELECT t1.c1, t2.c1
   obclient> CREATE TABLE t2 (c1 INT PRIMARY KEY, c2 INT);
   Query OK, 0 rows affected 
   
-  obclient> EXPLAIN SELECT * FROM t1 WHERE t1.c1 IN (SELECT t2.c2 FROM t2)\G
-  *************************** 1. row ***************************
+  obclient> EXPLAIN SELECT * FROM t1 WHERE t1.c1 IN (SELECT t2.c2 FROM t2);
+  
   Query Plan: 
   =======================================
   |ID|OPERATOR      |NAME|EST. ROWS|COST|
@@ -114,8 +114,8 @@ obclient>SELECT t1.c1, t2.c1
   将查询前面的操作符改为 `NOT IN` 后，可改写为 Anti Join，具体计划如下例所示：
 
   ```javascript
-  obclient> EXPLAIN SELECT * FROM t1 WHERE t1.c1 NOT IN (SELECT t2.c2 FROM t2)\G
-  *************************** 1. row ***************************
+  obclient> EXPLAIN SELECT * FROM t1 WHERE t1.c1 NOT IN (SELECT t2.c2 FROM t2);
+  
   Query Plan:
   ================================================
   |ID|OPERATOR             |NAME|EST. ROWS|COST  |
@@ -141,7 +141,7 @@ obclient>SELECT t1.c1, t2.c1
 
   ```javascript
   Q1: 
-  obclient> SELECT * FROM t1 WHERE t1.c1 IN  (SELECT t2.c1 FROM t2)\G;
+  obclient> SELECT * FROM t1 WHERE t1.c1 IN  (SELECT t2.c1 FROM t2);
   <==>
   Q2: 
   obclient> SELECT t1.* FROM t1, t2 WHERE t1.c1 = t2.c1;
@@ -150,8 +150,8 @@ obclient>SELECT t1.c1, t2.c1
   Q1 改写后的计划如下所示：
 
   ```javascript
-  obclient> EXPLAIN SELECT * FROM t1 WHERE t1.c1 IN (SELECT t2.c1 FROM t2)\G
-  *************************** 1. row ***************************
+  obclient> EXPLAIN SELECT * FROM t1 WHERE t1.c1 IN (SELECT t2.c1 FROM t2);
+
   Query Plan:
    ====================================
   |ID|OPERATOR   |NAME|EST. ROWS|COST|
@@ -199,8 +199,8 @@ obclient> SELECT c1 FROM t1 WHERE c1 > (SELECT MIN(c1) FROM t2);
 结合 `MAX`/`MIN` 进行改写后，可利用 `t2.c1` 的主键序将 `LIMIT 1` 直接下压到 `TABLE SCAN`，将 `MIN` 值输出，执行计划如下所示：
 
 ```javascript
-obclient> EXPLAIN SELECT c1 FROM t1 WHERE c1 > ANY(SELECT c1 FROM t2)\G
-*************************** 1. row ***************************
+obclient> EXPLAIN SELECT c1 FROM t1 WHERE c1 > ANY(SELECT c1 FROM t2);
+
 Query Plan:
  ===================================================
 |ID|OPERATOR        |NAME          |EST. ROWS|COST|
@@ -263,8 +263,8 @@ obclient>SELECT * FROM t1, t2 WHERE t1.c1 = t2.c1 AND t1.c2 > 1;
 改写后计划如下例所示, `t1.c2 > 1` 条件被下压到了 `TABLE SCAN` 层。
 
 ```javascript
-obclient> EXPLAIN SELECT * FROM t1, t2 WHERE t1.c1 = t2.c1 HAVING t1.c2 > 1\G
-*************************** 1. row ***************************
+obclient> EXPLAIN SELECT * FROM t1, t2 WHERE t1.c1 = t2.c1 HAVING t1.c2 > 1;
+
 Query Plan: 
 =========================================
 |ID|OPERATOR        |NAME|EST. ROWS|COST|
@@ -300,9 +300,8 @@ obclient> CREATE TABLE t2(c1 INT PRIMARY KEY, c2 INT, c3 INT, KEY IDX_c2(c2));
 Query OK, 0 rows affected 
 /*此命令需运行于 MySQL 模式下*/
 
-obclient> EXPLAIN EXTENDED_NOADDR SELECT t1.c1, t2.c2 FROM t1, t2 
-              WHERE t1.c1 = t2.c2 AND t1.c1 > 2\G
-*************************** 1. row ***************************
+obclient> EXPLAIN EXTENDED_NOADDR SELECT t1.c1, t2.c2 FROM t1, t2 WHERE t1.c1 = t2.c2 AND t1.c1 > 2;
+
 Query Plan: 
 ==========================================
 |ID|OPERATOR   |NAME      |EST. ROWS|COST|
@@ -339,8 +338,8 @@ Outputs & filters:
 如下例所示，对于 `WHERE 0 > 1 AND c1 ＝ 3`，由于 `0 > 1` 使得 `AND` 恒假， 所以该 SQL 不用执行，可直接返回，从而加快查询的执行。
 
 ```javascript
-obclient> EXPLAIN EXTENDED_NOADDR SELECT * FROM t1 WHERE 0 > 1 AND c1 = 3\G
-*************************** 1. row ***************************
+obclient> EXPLAIN EXTENDED_NOADDR SELECT * FROM t1 WHERE 0 > 1 AND c1 = 3;
+
 Query Plan: 
 ===================================
 |ID|OPERATOR  |NAME|EST. ROWS|COST|
@@ -512,8 +511,8 @@ Outputs & filters:
   obclient> CREATE TABLE t1 (c1 INT PRIMARY KEY, c2 INT);
   Query OK, 0 rows affected 
   
-  obclient> EXPLAIN EXTENDED_NOADDR SELECT DISTINCT 1,2 FROM t1\G
-  *************************** 1. row ***************************
+  obclient> EXPLAIN EXTENDED_NOADDR SELECT DISTINCT 1,2 FROM t1;
+  
   Query Plan: 
   ===================================
   |ID|OPERATOR  |NAME|EST. ROWS|COST|
@@ -540,8 +539,8 @@ Outputs & filters:
   <==>
   obclient> SELECT c1, c2 c3 FROM t2;
   
-  obclient> EXPLAIN SELECT DISTINCT c1, c2, c3 FROM t2\G
-  *************************** 1. row ***************************
+  obclient> EXPLAIN SELECT DISTINCT c1, c2, c3 FROM t2;
+ 
   Query Plan: 
   ===================================
   |ID|OPERATOR  |NAME|EST. ROWS|COST|
@@ -567,8 +566,8 @@ Outputs & filters:
   <==>
   obclient> SELECT MIN(c2) FROM (SELECT c2 FROM t2 ORDER BY c2 LIMIT 1) AS t;
   
-  obclient> EXPLAIN SELECT MIN(c2) FROM t1\G
-  *************************** 1. row ***************************
+  obclient> EXPLAIN SELECT MIN(c2) FROM t1;
+  
   Query Plan: 
   ==================================================
   |ID|OPERATOR       |NAME          |EST. ROWS|COST|
@@ -596,8 +595,8 @@ Outputs & filters:
   <==>
   obclient> SELECT 1 FROM t1 GROUP BY c1;
   
-  obclient> EXPLAIN EXTENDED_NOADDR SELECT MAX(1) FROM t1 GROUP BY c1\G
-  *************************** 1. row ***************************
+  obclient> EXPLAIN EXTENDED_NOADDR SELECT MAX(1) FROM t1 GROUP BY c1;
+  
   Query Plan: 
   ===================================
   |ID|OPERATOR  |NAME|EST. ROWS|COST|
@@ -620,8 +619,8 @@ Outputs & filters:
   <==> 
   obclient> SELECT MAX(t.a) FROM (SELECT 1 AS a FROM t1 LIMIT 1) t;
   
-  obclient> EXPLAIN EXTENDED_NOADDR SELECT MAX(1) FROM t1\G
-  *************************** 1. row ***************************
+  obclient> EXPLAIN EXTENDED_NOADDR SELECT MAX(1) FROM t1;
+  
   Query Plan: 
   ==================================================
   |ID|OPERATOR       |NAME          |EST. ROWS|COST|
