--- a/zh-CN/7.reference/10.performance-tuning-guide/5.sql-optimization/4.sql-optimization/4.optimizer-statistics/2.statistics-collection-methods/1.overview-of-statistics-collection-methods.md
+++ b/zh-CN/7.reference/10.performance-tuning-guide/5.sql-optimization/4.sql-optimization/4.optimizer-statistics/2.statistics-collection-methods/1.overview-of-statistics-collection-methods.md
@@ -14,22 +14,22 @@ OceanBase 数据库提供了同 Oracle 数据库兼容的视图以用于 Oracle 
 | ALL_PART_HISTOGRAMS、DBA_PART_HISTOGRAMS、USER_PART_HISTOGRAMS                      |  用于查询 `PARTITON` 级别的列级直方图统计信息。    |
 | ALL_SUBPART_HISTOGRAMS、DBA_SUBPART_HISTOGRAMS、USER_SUBPART_HISTOGRAMS             |  用于查询 `SUBPARTITON` 级别的列级直方图统计信息。 |
 | ALL_IND_STATISTICS、DBA_IND_STATISTICS、USER_IND_STATISTICS                         |  用于查询索引统计信息。 |
-| SYS.ALL_VIRTUAL_TABLE_STAT_REAL_AGENT                               | 用于查询表级的统计信息的代理表。                                   |
-| SYS.ALL_VIRTUAL_COLUMN_STAT_REAL_AGENT                              | 用于查询列级的基本统计信息的代理表。                                 |
-| SYS.ALL_VIRTUAL_HISTOGRAM_STAT_REAL_AGENT                           | 用于查询列级的直方图信息的代理表。                                  |
+| sys.ALL_VIRTUAL_TABLE_STAT_REAL_AGENT                               | 用于查询表级的统计信息的代理表。                                   |
+| sys.ALL_VIRTUAL_COLUMN_STAT_REAL_AGENT                              | 用于查询列级的基本统计信息的代理表。                                 |
+| sys.ALL_VIRTUAL_HISTOGRAM_STAT_REAL_AGENT                           | 用于查询列级的直方图信息的代理表。                                  |
 
 OceanBase 数据库 MySQL 模式下用于查询相关统计信息的视图如下表所示。
 
 |          视图名称                     |                        描述                       |
 |--------------------------------------|---------------------------------------------------|
-| OCEANBASE.DBA_TAB_STATISTICS         |  用于查询表级的统计信息。                      |
-| OCEANBASE.DBA_TAB_COL_STATISTICS     |  用于查询 `GLOBAL` 级别的列级统计信息。         |
-| OCEANBASE.DBA_PART_COL_STATISTICS    |  用于查询 `PARTITON` 级别的列级统计信息。       |
-| OCEANBASE.DBA_SUBPART_COL_STATISTICS |  用于查询 `SUBPARTITON` 级别的列级统计信息。    |
-| OCEANBASE.DBA_TAB_HISTOGRAMS         |  用于查询 `GLOBAL` 级别的列级直方图统计信息。   |
-| OCEANBASE.DBA_PART_HISTOGRAMS        |  用于查询 `PARTITON` 级别的列级直方图统计信息。    |
-| OCEANBASE.DBA_SUBPART_HISTOGRAMS     |  用于查询 `SUBPARTITON` 级别的列级直方图统计信息。 |
-| OCEANBASE.DBA_IND_STATISTICS         |  用于查询索引统计信息。 |
+| oceanbase.DBA_TAB_STATISTICS         |  用于查询表级的统计信息。                      |
+| oceanbase.DBA_TAB_COL_STATISTICS     |  用于查询 `GLOBAL` 级别的列级统计信息。         |
+| oceanbase.DBA_PART_COL_STATISTICS    |  用于查询 `PARTITON` 级别的列级统计信息。       |
+| oceanbase.DBA_SUBPART_COL_STATISTICS |  用于查询 `SUBPARTITON` 级别的列级统计信息。    |
+| oceanbase.DBA_TAB_HISTOGRAMS         |  用于查询 `GLOBAL` 级别的列级直方图统计信息。   |
+| oceanbase.DBA_PART_HISTOGRAMS        |  用于查询 `PARTITON` 级别的列级直方图统计信息。    |
+| oceanbase.DBA_SUBPART_HISTOGRAMS     |  用于查询 `SUBPARTITON` 级别的列级直方图统计信息。 |
+| oceanbase.DBA_IND_STATISTICS         |  用于查询索引统计信息。 |
 
 ### 更多信息
 
