--- a/zh-CN/7.reference/10.performance-tuning-guide/5.sql-optimization/4.sql-optimization/4.optimizer-statistics/3.statistics-management/2.delete-a-feature.md
+++ b/zh-CN/7.reference/10.performance-tuning-guide/5.sql-optimization/4.sql-optimization/4.optimizer-statistics/3.statistics-management/2.delete-a-feature.md
@@ -1,6 +1,6 @@
 # 删除功能
 
-OceanBase 数据库调用 DBMS_STATS 包相关的存储过程 PROCEDURE 去删除保存在内部表中收集的统计信息。
+OceanBase 数据库调用 DBMS_STATS 包相关的存储过程去删除保存在内部表中收集的统计信息。
 
 目前支持如下三种删除统计信息的方式：
 
@@ -69,21 +69,21 @@ PROCEDURE delete_index_stats(
 
 参数解释如下表所示。
 
-|       参数        |                                                                                       解释                                                                                        |
-|-----------------|---------------------------------------------------------------------------------------------------------------------------------------------------------------------------------|
-| ownname         | 用户名。如果用户名设置为 `NULL`，会默认使用当前登录的用户名。                                                                                                                                              |
-| tabname         | 表名。                                                                                                                                                                             |
-| indname         | 索引名。                                                                                                                                                                             |
-| partname        | 分区名。                                                                                                                                                                            |
-| colname         | 列名。                                                                                                                                                                             |
-| stattab         | 该参数暂未实现，不可用。                                                                                                                                                                    |
-| statid          | 该参数暂未实现，不可用。                                                                                                                                                                    |
-| cascade_parts   | 是否同时删除分区级、子分区级的统计信息，默认为 `TRUE`。                                                                                                                                                 |
-| cascade_columns | 是否同时列级的统计信息，默认为 `TRUE`。                                                                                                                                                         |
-| cascade_indexes | 该参数暂未实现，不可用。                                                                                                                                                                    |
-| statown         | 该参数暂未实现，不可用。                                                                                                                                                                    |
-| no_invalidate   | 该参数暂未实现，不可用。                                                                                                                                                                    |
-| force           | 是否强制删除，并忽略锁的状态。默认为 `FALSE`。                                                                                                                                                     |
+|       参数        |                解释                                       |
+|-----------------|----------------------------------------------------------------|
+| ownname         | <ul><li>Oracle 模式：用户名。如果设置为 `NULL`，会默认使用当前登录的用户名。 </li><li>MySQL 模式：表所在数据库名称。       |
+| tabname         | 表名。    |
+| indname         | 索引名。    |
+| partname        | 分区名。   |
+| colname         | 列名。   |
+| stattab         | 该参数暂未实现，不可用。 |
+| statid          | 该参数暂未实现，不可用。|
+| cascade_parts   | 是否同时删除分区级、子分区级的统计信息，默认为 `TRUE`。       |
+| cascade_columns | 是否同时列级的统计信息，默认为 `TRUE`。    |
+| cascade_indexes | 该参数暂未实现，不可用。|
+| statown         | 该参数暂未实现，不可用。|
+| no_invalidate   | 该参数暂未实现，不可用。|
+| force           | 是否强制删除，并忽略锁的状态。默认为 `FALSE`。    |
 | col_stat_type   | 删除列级统计信息时的类型。 <ul><li> `'ALL'` 表示删除所有的列级统计信息。</li>   <li> `'HISTOGRAM'` 表示仅仅只删除列级的直方图信息。</li>  </ul>  |
 
 统计信息的删除功能示例如下：
