--- a/zh-CN/7.reference/10.performance-tuning-guide/5.sql-optimization/4.sql-optimization/4.optimizer-statistics/3.statistics-management/3.setting-functions.md
+++ b/zh-CN/7.reference/10.performance-tuning-guide/5.sql-optimization/4.sql-optimization/4.optimizer-statistics/3.statistics-management/3.setting-functions.md
@@ -88,7 +88,7 @@ PROCEDURE SET_INDEX_STATS (
 
 |    参数    |                解释                 |
 |----------|-----------------------------------|
-| ownname  | 用户名。如果用户名设置为 `NULL`，会默认使用当前登录用户名。 |
+| ownname  | <ul><li>Oracle 模式：用户名。如果设置为 `NULL`，会默认使用当前登录用户名。</li><li>MySQL 模式：表所在数据库名称。 |
 | tabname  | 表名。                               |
 | tabname  | 索引名。                               |
 | partname | 分区名。                              |
