--- a/zh-CN/7.reference/10.performance-tuning-guide/5.sql-optimization/4.sql-optimization/4.optimizer-statistics/3.statistics-management/4.import-and-export.md
+++ b/zh-CN/7.reference/10.performance-tuning-guide/5.sql-optimization/4.sql-optimization/4.optimizer-statistics/3.statistics-management/4.import-and-export.md
@@ -65,7 +65,7 @@ PROCEDURE drop_stat_table(
 
 |        参数        |                解释                 |
 |------------------|-----------------------------------|
-| ownname          | 用户名。如果用户名设置为 `NULL`，会默认使用当前登录用户名。 |
+| ownname          | <ul><li>Oracle 模式：用户名。如果设置为 `NULL`，会默认使用当前登录用户名。</li><li>MySQL 模式：表所在数据库名称。 |
 | stattab          | 指定创建的统计信息用户表名称。                   |
 | tblspace         | 表组名称。                             |
 | global_temporary | 该参数暂未实现，不可用。                      |
@@ -75,11 +75,11 @@ PROCEDURE drop_stat_table(
 
 目前支持如下三种导出统计信息的方式：
 
-* 使用存储过程 `export_table_stats`导出表级的统计信息。
+* 使用存储过程 `export_table_stats` 导出表级的统计信息。
 
-* 使用存储过程 `export_column_stats`导出列级的统计信息。
+* 使用存储过程 `export_column_stats` 导出列级的统计信息。
 
-* 使用存储过程 `export_schema_stats`导出 Schema下的所有表的统计信息。
+* 使用存储过程 `export_schema_stats` 导出 Schema 下的所有表的统计信息。
 
 * 使用存储过程 `export_index_stats` 导出索引统计信息.
 
@@ -129,7 +129,7 @@ PROCEDURE export_index_stats (
 
 |      参数       |                 解释                 |
 |---------------|------------------------------------|
-| ownname       | 用户名。如果用户名设置为 `NULL`，会默认使用当前登录的用户名。 |
+| ownname       | <ul><li>Oracle 模式：用户名。如果设置为 `NULL`，会默认使用当前登录的用户名。</li><li>MySQL 模式：表所在数据库名称。 |
 | tabname       | 表名。                                |
 | indname       | 索引名。                                |
 | partname      | 分区名。                               |
@@ -207,7 +207,7 @@ PROCEDURE import_index_stats (
 
 |      参数       |                 解释                 |
 |---------------|------------------------------------|
-| ownname       | 用户名。如果用户名设置为 `NULL`，会默认使用当前登录的用户名。 |
+| ownname       | <ul><li>Oracle 模式：用户名。如果设置为 `NULL`，会默认使用当前登录的用户名。 </li><li>MySQL 模式：表所在数据库名称。|
 | tabname       | 表名。                                |
 | indname       | 索引名。                                |
 | partname      | 分区名。                               |
