--- a/zh-CN/7.reference/10.performance-tuning-guide/5.sql-optimization/4.sql-optimization/4.optimizer-statistics/3.statistics-management/7.collection-policy-configuration-items-prefs-management.md
+++ b/zh-CN/7.reference/10.performance-tuning-guide/5.sql-optimization/4.sql-optimization/4.optimizer-statistics/3.statistics-management/7.collection-policy-configuration-items-prefs-management.md
@@ -12,20 +12,20 @@ Oracle 模式下提供如下虚拟表来查询当前设置的 Prefs：
 
 可配置的统计信息收集策略 Prefs 如下表所示。
 
-|     Prefs 名称      |                                                                                                Prefs 取值                                                                                                 |                               说明                               |
-|-------------------|---------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------|----------------------------------------------------------------|
-| APPROXIMATE_NDV   | 取值范围： <ul><li> "TRUE"（默认值）</li>   <li> "FALSE" </li>  </ul>                                                                   | 计算 NDV 是否使用估算方式。需要注意，该 Prefs 不能插入`__all_optstat_user_prefs` 中。 |
-| CASCADE           | 取值范围： <ul><li> "TRUE" </li>  <li> "FALSE" </li>  <li> "DBMS_STATS.AUTO_CASCADE"（默认值）</li>  </ul>     | 该参数暂未使用。                                                       |
-| DEGREE            | 默认值：NULL                                                                                                                                                                                                | 收集并发度。                                                         |
-| ESTIMATE_PERCENT  | 取值范围：\[0.000001, 100\] 默认值："DBMS_STATS.AUTO_SAMPLE_SIZE"。                                                                                                                               | 采用比例。                                                          |
-| GRANULARITY       | 默认值为"AUTO"。                                                                                                                                                                                             | 收集分区粒度，语法和 `granularity` 相同。                                    |
-| INCREMENTAL       | 取值范围： <ul><li> "TRUE"</li>   <li> "FALSE" （默认值）</li> </ul>                                                                    | 是否采用增量收集策略。                                                    |
-| INCREMENTAL_LEVEL | 取值范围： <ul><li> "PARTITION"</li>   <li> "TABLE"（默认值） </li> </ul>                                                               | 增量收集级别。目前只支持表级别。                                               |
-| METHOD_OPT        | 默认值： "FOR ALL COLUMNS SIZE AUTO"                                                                                                                                                                        | 设置列级别的统计信息收集方式。语法和 `method_opt` 相同。                            |
-| NO_INVALIDATE     | 取值范围： <ul><li> "TRUE" </li>  <li> "FALSE" </li>  <li> "DBMS_STATS.AUTO_INVALIDATE"（默认值）</li></ul>    | 该参数暂未使用。                                                       |
-| OPTIONS           | 取值范围： <ul><li> "GATHER"（默认值）</li>   <li>  "GATHER AUTO"  </li> </ul>                                                          | 该参数暂未使用。                                                       |
-| STALE_PERCENT     | 默认值：10                                                                                                                                                                                                  | 统计信息过期比例阈值。                                                    |
-| STATS_RETENTION   | 取值范围：\[0-365000\] 默认值：31                                                                                                                                                                | 统计信息历史保留的间隔时间。                                                 |
+|     Prefs 名称      |                   Prefs 取值                   |                               说明                               |
+|-------------------|-------------------------------------------------|----------------------------------------------------------------|
+| APPROXIMATE_NDV   | 取值范围： <ul><li> "TRUE"（默认值）</li>   <li> "FALSE" </li>  </ul>        | 计算 NDV 是否使用估算方式。需要注意，该 Prefs 不能插入`__all_optstat_user_prefs` 中。 |
+| CASCADE           | 取值范围： <ul><li> "TRUE" </li>  <li> "FALSE" </li>  <li> "DBMS_STATS.AUTO_CASCADE"（默认值）</li>  </ul>     | 该参数暂未使用。       |
+| DEGREE            | 默认值：NULL       | 收集并发度。                                                         |
+| ESTIMATE_PERCENT  | 取值范围：\[0.000001, 100\] 默认值："DBMS_STATS.AUTO_SAMPLE_SIZE"。        | 采用比例。        |
+| GRANULARITY       | 默认值为"AUTO"。                                                         | 收集分区粒度，语法和 `granularity` 相同。  |
+| INCREMENTAL       | 取值范围： <ul><li> "TRUE"</li>   <li> "FALSE" （默认值）</li> </ul>         | 是否采用增量收集策略。     |
+| INCREMENTAL_LEVEL | 取值范围： <ul><li> "PARTITION"</li>   <li> "TABLE"（默认值） </li> </ul>                                                               | 增量收集级别。目前只支持表级别。    |
+| METHOD_OPT        | 默认值： "FOR ALL COLUMNS SIZE AUTO"   | 设置列级别的统计信息收集方式。语法和 `method_opt` 相同。                            |
+| NO_INVALIDATE     | 取值范围： <ul><li> "TRUE" </li>  <li> "FALSE" </li>  <li> "DBMS_STATS.AUTO_INVALIDATE"（默认值）</li></ul>    | 该参数暂未使用。   |
+| OPTIONS           | 取值范围： <ul><li> "GATHER"（默认值）</li>   <li>  "GATHER AUTO"  </li> </ul>                                                          | 该参数暂未使用。    |
+| STALE_PERCENT     | 默认值：10     | 统计信息过期比例阈值。                                                    |
+| STATS_RETENTION   | 取值范围：\[0-365000\] 默认值：31     | 统计信息历史保留的间隔时间。                                                 |
 
 ## 统计信息策略 Prefs 设置与获取
 
@@ -123,7 +123,7 @@ FUNCTION get_prefs (
 
 |   参数    |                解释                 |
 |---------|-----------------------------------|
-| ownname | 用户名。如果用户名设置为 `NULL`，会默认使用当前登录用户名。 |
+| ownname | <ul><li>Oracle 模式：用户名。如果用户名设置为 `NULL`，会默认使用当前登录用户名。</li><li>MySQL 模式：表所在数据库名称。  |
 | tabname | 表名。                               |
 | pname   | Prefs 的名字。                        |
 | pvalue  | Prefs 的值。                         |
