--- a/zh-CN/7.reference/5.sql-reference/1.sql-syntax/1.system-tenants/2.alter-system/32.refresh.md
+++ b/zh-CN/7.reference/5.sql-reference/1.sql-syntax/1.system-tenants/2.alter-system/32.refresh.md
@@ -23,7 +23,7 @@ refresh_action:
 |         **参数**       |         **描述**          |
 |------------------------|----------------------------|
 | REFRESH SCHEMA         | 刷新 Schema。 <br>**说明**  正常情况下，当系统执行 DDL 操作， Root Service 都会主动通知所有 OBServer 节点刷新 Schema。当某些 OBServer 节点发生异常，和 Root Service 网络中断，此时需要手动刷新 Schema。    |
-| REFRESH TIME_ZONE_INFO | 通知集群中的所有 Server 更新本地的时区信息。 <br>**说明**  当前版本暂不支持该参数。  |
+| REFRESH TIME_ZONE_INFO | 通知集群中的所有 Server 更新本地的时区信息。 <main id="notice" type='explain'><h4>说明</h4><p> 当前版本暂不支持该参数。</p></main>  |
 
 
 ## 示例
