--- a/zh-CN/7.reference/5.sql-reference/1.sql-syntax/1.system-tenants/2.alter-system/50.zone.md
+++ b/zh-CN/7.reference/5.sql-reference/1.sql-syntax/1.system-tenants/2.alter-system/50.zone.md
@@ -40,7 +40,7 @@ idc:
 |          **参数**      |          **描述**      |
 |------------------------|------------------------|
 | ADD ZONE                         | 新增 Zone。   |
-| {ALTER \| CHANGE \| MODIFY} ZONE | 修改 Zone 的 Region 属性。 <br>**说明**  `ALTER`、`CHANGE`、`MODIFY` 三者功能相同，可以使用任意命令来修改 Zone 的 Region 属性。</br>      |
+| {ALTER \| CHANGE \| MODIFY} ZONE | 修改 Zone 的 Region 属性。 <main id="notice" type='explain'><h4>说明</h4><p><code>ALTER</code>、<code>CHANGE</code>、<code>MODIFY</code> 三者功能相同，可以使用任意命令来修改 Zone 的 Region 属性。</p></main>       |
 | DELETE ZONE                      | 删除 Zone，删除前需要保证 Zone 中没有可用的 Server。 |
 | ISOLATE ZONE                     | 隔离有故障的 Zone。将故障 Zone 上的 Leader切换到其他机器上，从而恢复用户写服务，同时集群内日志同步状态也能恢复正常。   |
 | START \| STOP                    | 主动上下线 Zone。    |
