--- a/zh-CN/7.reference/5.sql-reference/1.sql-syntax/1.system-tenants/5.alter-tenant.md
+++ b/zh-CN/7.reference/5.sql-reference/1.sql-syntax/1.system-tenants/5.alter-tenant.md
@@ -39,11 +39,11 @@ opt_global_sys_vars_set:
 | RESOURCE_POOL_LIST       | 资源池列表。                                          |
 | DEFAULT TABLEGROUP       | 设置租户默认表组信息，`NULL` 表示取消数据库默认表组。                                                   |
 | COMMENT                  | 修改注释。                                                                            |
-| CHARACTER SET \| CHARSET | 修改租户的字符集。<br>**说明**  当前版本暂不支持此参数。                   |
-| COLLATE                  | 修改租户的字符序。<br> **说明**  当前版本暂不支持此参数。                   |
-| ZONE_LIST                | 指定要修改的 Zone 列表。 <br>**说明**  当前版本暂不支持此参数。             |
+| CHARACTER SET \| CHARSET | 修改租户的字符集。<main id="notice" type='explain'><h4>说明</h4><p> 当前版本暂不支持该参数。</p></main>                  |
+| COLLATE                  | 修改租户的字符序。<main id="notice" type='explain'><h4>说明</h4><p> 当前版本暂不支持该参数。</p></main>                  |
+| ZONE_LIST                | 指定要修改的 Zone 列表。 <main id="notice" type='explain'><h4>说明</h4><p> 当前版本暂不支持该参数。</p></main>            |
 | PRIMARY_ZONE             | 指定租户的 Primary Zone。                                                              |
-| READ ONLY \| READ WRITE  | 指定租户的只读或读写属性。 <br>**说明**  当前版本暂不支持此参数。               |
+| READ ONLY \| READ WRITE  | 指定租户的只读或读写属性。 <main id="notice" type='explain'><h4>说明</h4><p> 当前版本暂不支持该参数。</p></main>             |
 | LOCALITY                 | 描述副本在 Zone 间的分布情况，如：`F@z1,F@z2,F@z3` 表示 `z1`、`z2` 和 `z3` 为全功能副本。 |
 | system_var_name          | 修改租户的系统变量值。                                                                      |
 | RENAME GLOBAL_NAME TO    | 修改租户名称。                                                                          |
