--- a/zh-CN/7.reference/5.sql-reference/1.sql-syntax/1.system-tenants/12.set-decryption.md
+++ b/zh-CN/7.reference/5.sql-reference/1.sql-syntax/1.system-tenants/12.set-decryption.md
@@ -16,7 +16,7 @@ SET DECRYPTION IDENTIFIED BY  ('password'[, 'password' ...]);
 
 |    参数    |                                             描述                                              |
 |----------|---------------------------------------------------------------------------------------------|
-| password | 在备份时添加的密码。 <br>**说明**  当全量备份和增量备份设置的密码不一样，则需要输入多个密码，密码之间使用逗号分隔。 |
+| password | 在备份时添加的密码。 <main id="notice" type='explain'><h4>说明</h4><p> 当全量备份和增量备份设置的密码不一样，则需要输入多个密码，密码之间使用逗号分隔。</p></main>。 |
 
 ## 示例
 
