--- a/zh-CN/7.reference/5.sql-reference/1.sql-syntax/1.system-tenants/2.alter-system/22.flush.md
+++ b/zh-CN/7.reference/5.sql-reference/1.sql-syntax/1.system-tenants/2.alter-system/22.flush.md
@@ -32,7 +32,7 @@ tenant_name_list:
 | FLUSH PLAN CACHE| 清除指定 Database 和 SQL ID 的计划缓存。|
 | SQL_identifier | 用于指定 SQL，格式为 `sql_id = 'xxx'`。 如果不指定该参数，表示清空所有 SQL 的计划缓存。     |
 | database_list  | 用于指定 Database。 如果不指定该参数，表示清除所有计划缓存。  |
-| tenant_list    | 用于指定租户范围。 指定 `SQL_identifier` 和 `database_list` 参数时一定要指定 `tenant_list`，将操作限定在租户范围内。 <br>**说明**  只有系统租户 `sys` 才能指定 `tenant_list`，其他租户不能指定该参数，即其他租户只能清除自己的计划缓存。如果系统租户不指定 `tenant_list` 则表示清除所有租户的计划缓存。 |
+| tenant_list    | 用于指定租户范围。 指定 `SQL_identifier` 和 `database_list` 参数时一定要指定 `tenant_list`，将操作限定在租户范围内。<main id="notice" type='explain'><h4>说明</h4><p> 只有系统租户 <code>sys</code> 才能指定 <code>tenant_list</code>，其他租户不能指定该参数，即其他租户只能清除自己的计划缓存。如果系统租户不指定 <code>tenant_list</code> 则表示清除所有租户的计划缓存。</p></main>   |
 | GLOBAL         | 为可选字段。 如果不指定该参数，表示清空本机的计划缓存。反之，则表示清空该租户所在的所有服务器上的计划缓存。    |
 
 ## 示例
