--- a/zh-CN/7.reference/5.sql-reference/1.sql-syntax/1.system-tenants/2.alter-system/36.SERVER.md
+++ b/zh-CN/7.reference/5.sql-reference/1.sql-syntax/1.system-tenants/2.alter-system/36.SERVER.md
@@ -36,7 +36,7 @@ ip_port_list:
 | CANCEL DELETE | 取消删除 OBServer。    |
 | START         | 启动 OBServer。  |
 | STOP          | 停止 OBServer。 `STOP` 会检查停止后副本数是否满足多数派、等待 Clog 日志同步完成，并等待 Leader 副本切换到其他节点（即 Leader 改选）。     |
-| FORCE STOP    | 强制停止 OBServer。 `FORCE STOP` 会检查停止后副本数是否满足多数派，并等待 Leader 副本切换到其他节点（即 Leader 改选）。 <br>**注意**  强制停止 OBServer 不是常规的运维操作，由于强制停止不会等待 Clog 日志同步完成，该操作并不安全，一般情况下不建议使用。 |
+| FORCE STOP    | 强制停止 OBServer。 `FORCE STOP` 会检查停止后副本数是否满足多数派，并等待 Leader 副本切换到其他节点（即 Leader 改选）。 <main id="notice" type='notice'><h4>注意</h4><p> 强制停止 OBServer 不是常规的运维操作，由于强制停止不会等待 Clog 日志同步完成，该操作并不安全，一般情况下不建议使用。</p></main>  |
 | ISOLATE       | 隔离故障 OBServer，新的读写请求都不会路由到隔离的故障机器进程上。 `ISOLATE` 不会等待 Leader 副本切换到其他节点（即 Leader 改选）。       |
 
 ## 示例
