modify performance tuning and troubleshooting issues

--- a/zh-CN/6.manage/10.troubleshooting/5.election/3.without-leader.md
+++ b/zh-CN/6.manage/10.troubleshooting/5.election/3.without-leader.md
@@ -38,7 +38,7 @@
 grep 'T1_.*{id:1}' ./election.log | grep 'dump acceptor info'
 ```
 
-其中的，`lease:{owner:"xx.xx.xx.xx:xxxxx"` 表示该日志流的 Election Leader。
+其中的，`lease:{owner:"xx.xx.xx.xx:xxxxx"` 表示该日志流的 Election Leader，`xx.xx.xx.xx` 表示 IP 地址，`xxxxx` 表示端口号。
 
 若当前 Election Leader 不存在，很大概率是日志流的网络连通状态有问题，例如：
 
