--- a/zh-CN/6.manage/10.troubleshooting/7.clog.md
+++ b/zh-CN/6.manage/10.troubleshooting/7.clog.md
@@ -1,6 +1,6 @@
-# clog 问题
+# 日志同步问题
 
-本文介绍 clog 基本原理的介绍及常见问题。
+本文介绍日志同步的基本原理及常见问题。
 
 OceanBase clog 的全称是 OceanBase Commit Log，是 OceanBase 日志服务的核心。日志服务是 OceanBase 数据库的基础组件，承担着支持事务的原子性、持久性、隔离性以及数据库高可用等核心功能。在数据库提交的过程中通过 Paxos 协议保证多数派 clog 落盘，而少数派 clog 日志内容也会最终会持久化在硬盘上。OceanBase 数据库有自动的日志回收机制来保证日志盘的持续可写入。
 
