--- a/zh-CN/7.reference/10.performance-tuning-guide/5.sql-optimization/4.sql-optimization/3.monitor-sql-execution-performance/3.plan-cache-view.md
+++ b/zh-CN/7.reference/10.performance-tuning-guide/5.sql-optimization/4.sql-optimization/3.monitor-sql-execution-performance/3.plan-cache-view.md
@@ -84,7 +84,7 @@
 | HINTS_ALL_WORKED      | TINYINT(4)  |  NUMBER(38)    | SQL 计划中的 Hint 是否都已经生效      |
 | PL_SCHEMA_ID          | BIGNIT(20) UNSIGNED  |  NUMBER(38)    | 对于非匿名块的 PL 对象，字段为缓存对象的 Schema ID；对于匿名块，字段与 `PS_STMT_ID` 相同；对于 SQL 计划，该字段无意义。       |
 | IS_BATCHED_MULTI_STMT | TINYINT(4)   |  NUMBER(38)    | 表示是否为 Batched Multi Stmt 优化的计划        |
-| RULE_NAME             | VARCHAR(256)        | 不支持   |     规则名称         |
+| RULE_NAME             | VARCHAR(256)        | 不支持   |  表示是否命中用户自定义改写规则。         |
 
 ## (G)V$OB_PLAN_CACHE_PLAN_EXPLAIN
 
