--- a/zh-CN/7.reference/3.performance-tuning-guide/5.sql-optimization/4.sql-optimization/3.monitor-sql-execution-performance/3.plan-cache-view.md
+++ b/zh-CN/7.reference/3.performance-tuning-guide/5.sql-optimization/4.sql-optimization/3.monitor-sql-execution-performance/3.plan-cache-view.md
@@ -2,9 +2,9 @@
 
 计划缓存视图包含记录执行计划的缓存状态、执行统计的相关信息以及计划信息。
 
-## GV$OB_PLAN_CACHE_STAT
+## (G)V$OB_PLAN_CACHE_STAT
 
-`GV$OB_PLAN_CACHE_STAT` 视图用于记录每个计划缓存的状态，每个计划缓存在该视图中有一条记录。
+`(G)V$OB_PLAN_CACHE_STAT` 展示当前租户在当前（所有）OBServer 节点的计划缓存整体的状态。其字段信息如下表所示。
 
 |   **字段名称**   | **类型（MySQL 模式）**    |    **类型（Oracle 模式）**    |               **描述**                |
 |--------------|-------------|--------------|-------------------------------------|
@@ -22,9 +22,9 @@
 | HASH_BUCKET  | BIGNIT(38)   | NUMBER(38)   | `plan_cache` Hash Map 中的 Bucket 的个数 |
 | STMTKEY_NUM  | BIGNIT(38)   | NUMBER(38)   | `plan_cache` 中 `stmt_key` 的个数       |
 
-## GV$OB_PLAN_CACHE_PLAN_STAT
+## (G)V$OB_PLAN_CACHE_PLAN_STAT
 
-`GV$OB_PLAN_CACHE_PLAN_STAT` 用于记录计划缓存中所有执行计划的具体信息及每个计划总的执行统计信息，每个执行计划在该视图中有一条记录。
+`(G)V$OB_PLAN_CACHE_PLAN_STAT` 展示当前租户在当前（所有）OBServer 节点上的计划缓存中缓存的每一个缓存对象的状态。其字段信息如下表所示。
 
 |       **字段名称**        | **类型（MySQL 模式）**  | **类型（Oracle 模式）**  |           **描述**    |
 |-----------------------|-----------------------|----------------------|------------------------|
@@ -42,6 +42,7 @@
 | SPECIAL_PARAMS        | VARCHAR2(4096)|  VARCHAR2(4096)   | 表示不可参数化的参数值    |
 | PARAM_INFOS           | LONGTEXT      |  CLOB  | 表示参数化信息  |
 | SYS_VARS              | VARCHAR2(4096)| VARCHAR2(4096)   | 影响缓存对象的系统变量的值   |
+| CONFIGS               | VARCHAR(4096)       | 不支持该字段  |    表示影响执行计划的配置项信息    | 
 | PLAN_HASH             | BIGNIT(20) UNSIGNED   |  NUMBER(38) | SQL 执行计划的哈希值   |
 | FIRST_LOAD_TIME       | TIMESTAMP(6) |  TIMESTAMP(6) WITH LOCAL TIME ZONE | 第一次被加载时间   |
 | SCHEMA_VERSION        | BIGNIT(20)   |  NUMBER(38)                        | Schema 版本号   |
@@ -84,18 +85,11 @@
 | OBJECT_TYPE           | LONGTEXT     |  CLOB    | 缓存对象的类型： <ul><li> SQL_PLAN</li>   <li> PROCEDURE</li>   <li> FUNCTION </li>  <li> PACKAGE</li>   <li> ANONYMOUS   </li> </ul>         |
 | PL_SCHEMA_ID          | BIGNIT(20) UNSIGNED  |  NUMBER(38)    | 对于非匿名块的 PL 对象，字段为缓存对象的 Schema ID；对于匿名块，字段与 `PS_STMT_ID` 相同；对于 SQL 计划，该字段无意义。       |
 | IS_BATCHED_MULTI_STMT | TINYINT(4)   |  NUMBER(38)    | 表示是否为 Batched Multi Stmt 优化的计划        |
+| RULE_NAME             | VARCHAR(256)        | 不支持该字段   |  表示是否命中用户自定义改写规则。         |
 
-## GV$OB_PLAN_CACHE_PLAN_EXPLAIN
+## (G)V$OB_PLAN_CACHE_PLAN_EXPLAIN
 
-`GV$OB_PLAN_CACHE_PLAN_EXPLAIN` 用于查询某条 SQL 在计划缓存中的执行计划。
-
-  <main id="notice" type='notice'>
-    <h4>注意</h4>
-    <ul>
-    <li>如果查询 <code>GV$OB_PLAN_CACHE_PLAN_EXPLAIN</code> 表, 则需要指定 <code>IP</code>、<code>Port</code>、<code>TENANT_ID</code>、<code>PLAN_ID</code> 等条件。</li>
-    <li>如果查询 <code>GV$OB_PLAN_CACHE_PLAN_EXPLAIN</code> 表, 则需要指定 <code>TENANT_ID</code>、<code>PLAN_ID</code> 等条件。</li>
-    </ul>
-  </main>
+`(G)V$OB_PLAN_CACHE_PLAN_EXPLAIN` 展示缓存在当前（全部）OBServer 节点中的计划缓存中的物理执行计划。其字段信息如下表所示。
 
 |   **字段名称**   | **类型（MySQL 模式）**  |  **类型（Oracle 模式）**    |      **描述**      |
 |--------------|----------------|----------------|------------------|
@@ -110,3 +104,7 @@
 | ROWS         | BIGNIT(20)   | NUMBER(38)     | 预估的结果行数          |
 | COST         | BIGNIT(20)   | NUMBER(38)     | 预估的代价            |
 | PROPERTY     | VARCHAR2(4096) | VARCHAR2(4096) |对应算子的信息          |
+
+## 相关文档
+
+[实时执行计划展示](../../2.sql-execution-plan/5.real-time-execution-plan-display.md)
